fixed nav icon overlapping site title

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -279,7 +279,7 @@ figure {
 }
 .logo {
   height: 150px;
-  padding-right: 10%;
+  // padding-right: 10%;
 }
 .header-container {
   display: flex;
