--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -22,15 +22,18 @@
   @include relative-font-size(1.625);
   font-family: Virgil;
   font-weight: 300;
-  font-size: 38px;
   text-align: center;
   letter-spacing: -1px;
   margin-bottom: 0;
   margin-top: 12px;
+  font-size: 56px;
+  padding-right: 0;
   // float: left;
 
-  @media screen and (min-width: 500px) {
-    font-size: 56px;
+  @include media-query($on-palm) {
+    font-size: 38px;
+    padding-right: 43px;
+
   }
 
   &,
@@ -91,7 +94,7 @@
 
   @include media-query($on-palm) {
     position: absolute;
-    top: 9px;
+    top: 15px;
     right: $spacing-unit / 2;
     background-color: var(--md-sys-color-surface-container);
     border-radius: 8px;
@@ -227,6 +230,7 @@
 
 .post-list-heading {
   @include relative-font-size(1.75);
+  margin-top: 15px;
 }
 
 .post-list {
